# mcp_agent_mail_rust

./: .gitignore  .rchignore  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  CONTEXT_SETUP_LOG.md  Cargo.toml  Dockerfile  EXISTING_MCP_AGENT_MAIL_STRUCTURE.md  FEATURE_PARITY.md  GEMINI_DEEP_REVIEW.md  GEMINI_FINAL_REPORT.md  GEMINI_FIXES.md  GEMINI_FIXES_2.md  GEMINI_FIXES_3.md  GEMINI_FIXES_4.md  GEMINI_FIXES_5.md  GEMINI_FIXES_6.md  GEMINI_FIXES_7.md  GEMINI_FIXES_8.md  GEMINI_FIXES_9.md  GEMINI_REVIEW_SUMMARY.md  GEMINI_STATUS.md  PLAN_TO_PORT_MCP_AGENT_MAIL_TO_RUST.md  README.md  RECOVERY_RUNBOOK.md  SECURITY.md  TODO.md  TODO_AGENT_MAIL_RUST_TRANSITION_EXECUTION.md  UPGRADE_LOG.md  VISION.md  cline.mcp.json  codex.mcp.json  cursor.mcp.json  deny.toml  factory.mcp.json  gemini.mcp.json  install.ps1  install.sh  opencode.json  (+5 more)
crates/mcp-agent-mail/: Cargo.toml
crates/mcp-agent-mail-conformance/: Cargo.toml  README.md  storage.sqlite3  storage.sqlite3-shm  storage.sqlite3-wal
crates/mcp-agent-mail-conformance/src/: lib.rs
crates/mcp-agent-mail-conformance/tests/: conformance.rs  conformance_debug.rs  contact_enforcement_outage.rs  doc_consistency.rs  error_code_parity.rs  protocol_compliance.rs  resource_coverage_guard.rs  resource_description_parity.rs  tool_description_parity.rs
crates/mcp-agent-mail-db/: Cargo.toml
crates/mcp-agent-mail-db/benches/: cache_bench.rs  inbox_bench.rs  search_v3_bench.rs  two_tier_bench.rs
crates/mcp-agent-mail-db/src/: archive_anomaly.rs  atc_queries.rs  cache.rs  circuit_breaker.rs  coalesce.rs  error.rs  forensics.rs  id_floor.rs  integrity.rs  invariants.rs  lib.rs  mail_explorer.rs  mailbox_verdict.rs  migrate.rs  models.rs  pool.rs  queries.rs  query_assistance.rs  query_plan_diagnostics.rs  reconstruct.rs  recovery_retention.rs  retry.rs  s3fifo.rs  schema.rs  search_auto_init.rs  search_cache.rs  search_candidates.rs  search_canonical.rs  search_consistency.rs  search_diversity.rs  search_embedder.rs  search_embedding_jobs.rs  search_engine.rs  search_fastembed.rs  search_filter_compiler.rs  search_fs_bridge.rs  search_fusion.rs  search_index_layout.rs  search_metrics.rs  search_model2vec.rs  (+17 more)
crates/mcp-agent-mail-db/tests/: archive_search_consistency.rs  atc_experience_lifecycle.rs  atc_leader_lease.rs  atc_rollup_snapshot.rs  cache_golden.rs  coalesce_stress.rs  diversity_dedup.rs  evidence_wiring.rs  fault_injection.rs  filter_pagination.rs  forensic_bundle_replay.rs  frankensqlite_pragma_conformance.rs  golden_ranking.rs  identity_fts_cleanup.rs  load_bench.rs  load_concurrency.rs  logging_redaction.rs  mail_explorer.rs  migration_tests.rs  parser_filter_fusion_rerank.rs  pool_exhaustion.rs  query_assistance_explain.rs  query_integration.rs  relevance_harness.rs  s3fifo_bug.rs  schema_invariants.rs  schema_migration.rs  scope_policy_property.rs  search_benchmark.rs  search_conformance_fuzz.rs  search_planner_unit.rs  search_quality.rs  search_v3_conformance.rs  stress.rs  sustained_load.rs  timeout_backpressure.rs
crates/mcp-agent-mail-guard/fuzz/: Cargo.toml
crates/mcp-agent-mail-search-core/: Cargo.toml
crates/mcp-agent-mail-search-core/benches/: two_tier_bench.rs
crates/mcp-agent-mail-search-core/src/: auto_init.rs  cache.rs  canonical.rs  consistency.rs  diversity.rs  document.rs  embedder.rs  embedding_jobs.rs  engine.rs  envelope.rs  error.rs  fastembed.rs  filter_compiler.rs  fs_bridge.rs  fusion.rs  hybrid_candidates.rs  index_layout.rs  lexical_parser.rs  lexical_response.rs  lib.rs  metrics.rs  model2vec.rs  query.rs  results.rs  rollout.rs  tantivy_schema.rs  two_tier.rs  updater.rs  vector_index.rs
crates/mcp-agent-mail-search-core/tests/: fault_injection.rs  parser_filter_fusion_rerank.rs  query_assistance_explain.rs
crates/mcp-agent-mail-server/: Cargo.toml
crates/mcp-agent-mail-server/benches/: frame_bench.rs  health_sweep_bench.rs  widget_bench.rs
crates/mcp-agent-mail-server/src/: ack_ttl.rs  ammonia_bug_test.rs  atc.rs  atc_replay.rs  backup_rotation.rs  cleanup.rs  console.rs  disk_monitor.rs  integrity_guard.rs  lib.rs  mail_ui.rs  maintenance.rs  markdown.rs  retention.rs  startup_checks.rs  static_export.rs  static_files.rs  templates.rs  tool_metrics.rs  tui_action_menu.rs  tui_app.rs  tui_bridge.rs  tui_chrome.rs  tui_compose.rs  tui_decision.rs  tui_events.rs  tui_focus.rs  tui_hit_regions.rs  tui_keymap.rs  tui_layout.rs  tui_macro.rs  tui_markdown.rs  tui_panel_helpers.rs  tui_persist.rs  tui_poller.rs  tui_preset.rs  tui_theme.rs  tui_web_dashboard.rs  tui_widgets.rs  tui_ws_input.rs  (+1 more)
crates/mcp-agent-mail-server/templates/: archive_commit.html  archive_timeline.html  base.html  mail_claims.html  mail_inbox.html  mail_message.html  mail_project.html  mail_search.html  mail_unified_inbox.html  overseer_compose.html
crates/mcp-agent-mail-server/tests/: alien_integration.rs  console_output.rs  e2e_atc_learning_loop.rs  fixture_matrix.rs  golden_snapshots.rs  health_sweep_orphan_refs.rs  observability_schemas.rs  pty_e2e_search.rs  segfault_toast.rs  startup_compat.rs  truthfulness_integration.rs  tui_perf_baselines.rs  tui_soak_replay.rs  ui_markdown_templates.rs  workers.rs
crates/mcp-agent-mail-storage/: Cargo.toml
crates/mcp-agent-mail-storage/benches/: boot_check_bench.rs
crates/mcp-agent-mail-storage/fuzz/: Cargo.toml
crates/mcp-agent-mail-storage/src/: boot_check.rs  lib.rs  recovery.rs
crates/mcp-agent-mail-storage/tests/: archive.rs  archive_batch_write_schema.rs  atc_retention_soak.rs  fsync_matrix.rs  libgit2_index_race_immunity.rs  stress_pipeline.rs  stress_pipeline_known_bad_git.rs
crates/mcp-agent-mail-test-helpers/: Cargo.toml
crates/mcp-agent-mail-test-helpers/src/: lib.rs  parity.rs  repo.rs  shim_git.rs
crates/mcp-agent-mail-tools/: Cargo.toml
crates/mcp-agent-mail-tools/src/: archive_read.rs  build_slots.rs  contacts.rs  degraded_intents.rs  identity.rs  lib.rs  llm.rs  macros.rs  messaging.rs  metrics.rs  products.rs  proof_gate.rs  reservation_index.rs  reservation_parity.rs  reservations.rs  (+2 more)
experimental/mcp-agent-mail-wasm/: Cargo.toml
(+1053 files in other folders)
