[package]
name = "mcp-agent-mail-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Conformance test harness for MCP Agent Mail"
publish = false

[[test]]
name = "docs_drift_ci"
path = "../../tests/docs_drift_ci.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap = { version = "2", features = ["serde"] }
clap.workspace = true
chrono.workspace = true
mcp-agent-mail-server = { path = "../mcp-agent-mail-server" }

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
fastmcp.workspace = true
fastmcp-core.workspace = true
fastmcp-transport.workspace = true
mcp-agent-mail-core.workspace = true
mcp-agent-mail-db.workspace = true
mcp-agent-mail-storage.workspace = true
mcp-agent-mail-tools.workspace = true
# test-internals enables `Cx::for_testing()` for the conformance test suite
# only (dev-dependency); the capability-security gate stays intact elsewhere.
asupersync = { workspace = true, features = ["test-internals"] }
tempfile.workspace = true
regex.workspace = true
sha1.workspace = true
proptest.workspace = true
