[package]
name = "mcp-agent-mail-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Database layer for MCP Agent Mail"

[dependencies]
mcp-agent-mail-core = { path = "../mcp-agent-mail-core" }
mcp-agent-mail-search-core = { path = "../mcp-agent-mail-search-core" }
tantivy.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
half = { workspace = true, optional = true }

# sqlmodel dependencies
sqlmodel.workspace = true
sqlmodel-core.workspace = true
sqlmodel-query.workspace = true
sqlmodel-schema.workspace = true
sqlmodel-session.workspace = true
sqlmodel-pool.workspace = true
sqlmodel-sqlite.workspace = true
sqlmodel-frankensqlite.workspace = true

# LRU cache
indexmap.workspace = true

# Async runtime
asupersync.workspace = true

[features]
default = ["hybrid", "s3fifo"]
# Enable hybrid search (lexical + semantic)
hybrid = ["mcp-agent-mail-search-core/hybrid", "dep:half"]
# Enable loom model-checking tests (run with `cargo test --features loom-tests`)
loom-tests = []
# Use S3-FIFO eviction in ReadCache (replaces IndexMap LRU)
s3fifo = []

[dev-dependencies]
criterion.workspace = true
loom.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "coalesce_bench"
harness = false

[[bench]]
name = "search_v3_bench"
harness = false

[lints]
workspace = true
