[package]
name = "mcp-agent-mail-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Database layer for MCP Agent Mail"

[dependencies]
mcp-agent-mail-core = { path = "../mcp-agent-mail-core" }
mcp-agent-mail-search-core = { path = "../mcp-agent-mail-search-core" }
tantivy.workspace = true
frankensearch.workspace = true
frankensearch-core.workspace = true
frankensearch-embed.workspace = true
frankensearch-fusion.workspace = true
frankensearch-index.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
half = { workspace = true, optional = true }

# sqlmodel dependencies
sqlmodel.workspace = true
sqlmodel-core.workspace = true
sqlmodel-query.workspace = true
sqlmodel-schema.workspace = true
sqlmodel-session.workspace = true
sqlmodel-pool.workspace = true
sqlmodel-frankensqlite.workspace = true
sqlmodel-sqlite.workspace = true

# LRU cache
indexmap.workspace = true

# Async runtime
asupersync.workspace = true

[features]
default = ["hybrid", "s3fifo", "tantivy-engine"]
# Enable Tantivy-based lexical search (moved from search-core)
tantivy-engine = []
# Enable hybrid search (lexical + semantic)
hybrid = ["mcp-agent-mail-search-core/hybrid", "dep:half"]
# Enable loom model-checking tests (run with `cargo test --features loom-tests`)
loom-tests = []
# Use S3-FIFO eviction in ReadCache (replaces IndexMap LRU)
s3fifo = []

[dev-dependencies]
criterion.workspace = true
loom.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "coalesce_bench"
harness = false

[[bench]]
name = "search_v3_bench"
harness = false

[[bench]]
name = "two_tier_bench"
harness = false
required-features = ["hybrid"]

[lints]
workspace = true
