[package]
name = "mcp-agent-mail-test-helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared test helpers (shim builders, repo factories, metrics snapshots) — br-8ujfs.7.6"

[dependencies]
git2.workspace = true
tempfile = "3"
tracing.workspace = true

[lints]
workspace = true
