[package]
name = "mcp-agent-mail-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP tools implementation for MCP Agent Mail"
# Distributed as binary-only via dist.yml + curl|bash installer.
# Workspace depends on unpublished sibling path crates, so cargo publish is not viable.
publish = false

[dependencies]
mcp-agent-mail-core = { workspace = true }
mcp-agent-mail-db = { workspace = true, default-features = false }
mcp-agent-mail-storage = { workspace = true, default-features = false }
mcp-agent-mail-guard = { workspace = true }
fastmcp = { workspace = true }
fastmcp-protocol = { workspace = true }
fastmcp-core = { workspace = true }
fastmcp-server = { workspace = true }
asupersync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }
globset = { workspace = true }
smallvec = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
fs2 = { workspace = true }
# Registration proof gate: Ed25519 signature verification of registration proofs.
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

[features]
default = ["mcp-agent-mail-db/default", "mcp-agent-mail-storage/default"]
portable = ["mcp-agent-mail-db/portable", "mcp-agent-mail-storage/portable"]

[dev-dependencies]
arbitrary = "1"
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
